@@ -3,6 +3,7 @@ package gargoyle.ct.convert;
 import gargoyle.ct.convert.impl.*;
 import org.jetbrains.annotations.NotNull;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -29,9 +30,9 @@ public final class Converters {
             return converter;
         }
         try {
-            converter = (Converter<T>) clazz.newInstance();
-        } catch (@NotNull InstantiationException | IllegalAccessException ex) {
-            throw new RuntimeException(ex);
+            converter = (Converter<T>) clazz.getConstructor().newInstance();
+        } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
+            throw new IllegalArgumentException(e);
         }
         instances.put(clazz, converter);
         return converter;
